src/objects/Survey_Configuration__mdt.object
<CustomObject>
    <description>To store survey related configurations</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Type of Survey or any other category</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provide details of specific custom setting</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value in key value pair</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Configuration</label>
    <pluralLabel>Survey Configurations</pluralLabel>
</CustomObject>